# solar

./: .gitmodules  CMakeLists.txt  README.md
sim/: object.cpp  object.h  simulate.cpp  simulate.h  vis.cpp  vis.h
